-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0 Beta 1
-
f2df9cef75bb035cacf341871406c40e39d21495
CI fails on windows with this patch:
https://codereview.qt-project.org/#change,26167
Although it passes when run by a developer:
http://thread.gmane.org/gmane.comp.lib.qt.devel/4308
The cause is unknown.
| For Gerrit Dashboard: QTBUG-26061 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 28316,1 | Fix crash in qt_qpa_core_dispatcher() at application exit. | master | qt/qtbase | Status: MERGED | +2 | 0 |